# micor_services-exerc1

./: .gitignore  README.md  __init__.py  docker-compose.yml  pyproject.toml
Service-A/: .dockerignore  .env.example  Dockerfile  Dockerfile.postgres  db.py  main.py  schemas.py
Service-A/tests/: conftest.py  test_api.py  test_db.py
Service-C/: .gitignore  Dockerfile  index.js  package-lock.json  package.json
